--- a/kpiMinificado.css
+++ b/kpiMinificado.css
@@ -1,5 +1,10 @@
 *{ margin: 0; padding: 0; font-family: Verdana, Geneva, Tahoma, sans-serif}
 
+:root{
+  --tamanhoInicial: 80px;
+  --tamanhoAumentado: 90px;
+}
+
 body{ background-color: transparent; }
 
 #container-simplificacao{
@@ -29,8 +34,8 @@ body{ background-color: transparent; }
   position: absolute;
   bottom: 0;
   right: 0;
-  width: 120px;
-  height: 120px;
+  width: var(--tamanhoInicial);
+  height: var(--tamanhoInicial);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,9 +50,9 @@ body{ background-color: transparent; }
   position: absolute;
   bottom: 5px;
   right: -5px;
-  width: 50px;
-  height: 50px;
-  font-size: 2rem;
+  width: 30px;
+  height: 30px;
+  font-size: 1.7rem;
   color: #FFF;
   background-color: #222;
   border-radius: 50%;
@@ -59,8 +64,8 @@ body{ background-color: transparent; }
 
 .alterar-posicao i{
   position: absolute;
-  top: -100px;
-  font-size: 3rem;
+  top: -80px;
+  font-size: 2rem;
   cursor: pointer;
   transition-duration: .5s;
 }
@@ -86,9 +91,9 @@ body{ background-color: transparent; }
 }
 
 .titulo-modal h1{
-  margin: 10px 0;
+  margin: 5px 0;
   margin-right: -35px;
-  font-size: 3rem;
+  font-size: 2.5rem;
   display: flex;
   justify-content: center
 }
@@ -109,16 +114,40 @@ body{ background-color: transparent; }
 }
 
 #container-graficos{
-  max-height: 250px;
+  max-height: 281px;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-color: #736B66 rgba(0,0,0,0.8);
   scrollbar-width: thin;
 }
 
+#graficos{
+  height: 100%;
+  /* height: 280px; */
+  /* width: 100%; */
+}
+
 #container-graficos::-webkit-scrollbar-track{ background-color: #736B66 }
 #container-graficos::-webkit-scrollbar{ width: 10px }
 #container-graficos::-webkit-scrollbar-thumb{ background-color: rgba(0, 0, 0, 0.8) }
+
+.tooltip{
+  color: #FFF;
+  border: 1px solid #FFF;
+  border-radius: 5px;
+  padding: 5px;
+  font-weight: 600;
+}
+
+.tooltip.meta{
+  background-color: #0367A6;
+}
+.tooltip.voce{
+  background-color: #FB8C00;
+}
+.tooltip.primeiro{
+  background-color: #009921;
+}
 
 /* Animacoes */
 .abreModal{
@@ -184,12 +213,12 @@ body{ background-color: transparent; }
 
 @keyframes ajustaSvg{
   0%{
-    width: 120px;
-    height: 120px;
+    width: var(--tamanhoInicial);
+    height: var(--tamanhoInicial);
   }
   100%{
-    width: 80px;
-    height: 80px;
+    width: var(--tamanhoAumentado);
+    height: var(--tamanhoAumentado);
   }
 }
 
@@ -229,7 +258,7 @@ body{ background-color: transparent; }
   margin-top: -7px;
   background-color: #222;
   color: #FFF;
-  height: 57px;
+  height: 70px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -247,13 +276,20 @@ body{ background-color: transparent; }
 }
 
 .carousel-inner{
-  height: 57px;
+  height: 70px;
+}
+
+.sem-mensagens{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70px;
 }
 
 .item{
   padding: 15px;
   padding-right: 35px;
-  max-height: 57px!important;
+  max-height: 70px!important;
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-color: #736B66 rgba(0,0,0,0.8);
