--- a/kpiMinificado.css
+++ b/kpiMinificado.css
@@ -40,8 +40,8 @@ body{ background-color: transparent; }
   left: -230px;
 
   width: 200px;
-  height: 65px;
-  max-height: 70px;
+  height: 75px;
+  max-height: 75px;
   font-size: .975rem;
   background-color: var(--cor-msg-feedback);
   border-radius: 10px;
@@ -60,30 +60,31 @@ body{ background-color: transparent; }
 }
 
 .item{
+  margin: 5px;
+}
+
+.item-content{
+  display: flex;
+  width: 100%;
+
   overflow-x: hidden;
   overflow-y: auto;
   scrollbar-color: #736B66 rgba(0,0,0,0.8);
   scrollbar-width: thin;
-  max-height: 100%;
+  max-height: 65px;
 }
 
-.item::-webkit-scrollbar-track{ background-color: #736B66 }
-.item::-webkit-scrollbar{ width: 5px }
-.item::-webkit-scrollbar-thumb{ background-color: rgba(0, 0, 0, 0.8) }
-
-.item-content{
-  display: flex;
-  align-items: center;
-  width: 100%;
-  margin: 15px 5px;
-}
-
-.item-content p{
-  margin: 0 0 0 3px;
-}
+.item-content::-webkit-scrollbar-track{ background-color: #736B66 }
+.item-content::-webkit-scrollbar{ width: 5px }
+.item-content::-webkit-scrollbar-thumb{ background-color: rgba(0, 0, 0, 0.8) }
 
 .item-content i{
   font-size: 1.4rem;
+  margin-right: 3px;
+}
+
+.item-content p {
+  margin: 0;
 }
 
 .fechar-miniGamek{
